--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {     // Add this line
+            name 'oss-sonatype'
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
 }
 
