--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,20 @@ dependencies:
   url_launcher: ^6.2.4
   cached_network_image: ^3.3.1
   internet_connection_checker_plus: ^2.2.0
-  shared_preferences: ^2.2.2
   dartz: ^0.10.1
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
+  google_mlkit_face_detection: ^0.9.0
+  google_mlkit_commons: ^0.6.1
+  tflite_flutter: ^0.10.4
+  camera: ^0.10.5+9
+  image: ^4.1.7
+  lottie: ^3.0.0
+  hive: ^2.2.3
+  path_provider: ^2.1.2
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  introduction_screen: ^3.1.12
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +69,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   json_serializable: ^6.7.1
   build_runner: ^2.4.8
 
@@ -75,9 +85,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
