--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   introduction_screen: ^3.1.12
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
