--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   dio: ^5.4.0
   freezed: ^2.4.7
   freezed_annotation: ^2.4.1
-  geolocator: ^10.1.0
+  geolocator: ^11.0.0
   get_it: ^7.6.7
   nb_utils: ^6.1.2
   url_launcher: ^6.2.4
@@ -90,6 +90,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/icons/
     - assets/ca/
 
   # An image asset can refer to one or more resolution-specific "variants", see
