--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   introduction_screen: ^3.1.12
   permission_handler: ^11.3.0
   loading_animation_widget: ^1.2.0+4
+  syncfusion_flutter_datepicker: ^24.2.6
 
 dev_dependencies:
   flutter_test:
