latest update and optimize

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   permission_handler: ^11.3.0
   loading_animation_widget: ^1.2.0+4
   syncfusion_flutter_datepicker: ^24.2.6
+  collection: ^1.18.0
+  geocoding: ^2.2.0
 
 dev_dependencies:
   flutter_test:
