--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,12 +22,12 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
-android {
+android {    
     aaptOptions {
         noCompress 'tflite'
         noCompress 'lite'
     }
-    
+
     namespace "com.example.absentapps"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -61,6 +61,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            // minifyEnabled true
+            // shrinkResources true
+            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
